[metadata]
name = astyle_py
version = 0.1.0
description = Astyle, wrapped in a python package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/igrr/astyle_py
author = Ivan Grokhotkov
author_email = ivan@espressif.com
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires =
    wasmtime
include_package_data = True
python_requires = >=3.6

[options.package_data]
astyle_py = libastyle.wasm

[options.entry_points]
console_scripts =
    astyle_py = astyle_py.astyle_wrapper:main

[bdist_wheel]
universal = True

