[metadata]
name = astyle_py
version = attr: astyle_py.__version__
description = Astyle, wrapped in a python package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/igrr/astyle_py
author = Ivan Grokhotkov
author_email = ivan@espressif.com
license = MIT
license_files = LICENSE
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    wasmtime~=30.0.0
    PyYAML~=6.0.1
include_package_data = True
python_requires = >=3.9

[options.extras_require]
dev =
    pytest
    types-PyYAML
    pre-commit
    coverage

[options.package_data]
astyle_py = lib/*/libastyle.wasm

[options.entry_points]
console_scripts =
    astyle_py = astyle_py.__main__:main

[bdist_wheel]
universal = True

[flake8]
max-line-length = 120
